syntax = "proto3";

message StartPipelineProtoMsg {
    string pipelineName = 1;
}